2009-02-24  Dominique Dumont  <dominique.dumont@hp.com> 1.101

	* config-edit-xorg: new file to ease firing up xorg.conf editor

	* lib/Config/Model/models/: all model files are now edited and
	written by Config::Model::Itself. Added Fglrx model. Added
	Extensions model. 

2008-09-29  Dominique Dumont  <dominique.dumont@hp.com> 0.513

	* lib/Config/Model/Xorg/Read.pm (read write): Fixed to fit new
	Config::Model::Autoread

2008-09-26  Dominique Dumont  <dominique.dumont@hp.com> 

	* lib/Config/Model/models/Xorg/Device/Vesa.pl: New file to provide
	vesa driver model

	* Build.PL (): Try several directories to find xorg conf
	dir (Thanks to Slaven Rezic for the suggestion) See
	http://rt.cpan.org/Ticket/Display.html?id=39339


2008-04-07  Dominique Dumont  v0.512

	* lib/Config/Model/Xorg/Read.pm (parse_option): Skip wrong Options
	when read in tolerant mode (-force option)

2008-04-02  Dominique Dumont  v0.511

	* lib/Config/Model/models/Xorg/ServerLayout.pl: no longer use
	value_type in warp mechanism

	* lib/Config/Model/models/Xorg/Monitor.pl: idem

2008-02-26  Dominique Dumont  v0.510

	* Build.PL: Use local when setting $Data::Dumper::Terse to 0 to
	avoid breaking Module::Build > 0.2808_01

2008-02-08  Dominique Dumont  v0.509

	* Build.PL (): Fixed a bug that happened on OpenSolaris 

2008-02-01  Dominique Dumont  v0.508

	* Build.PL (): Removed default value for XkbRules as figuring a
	default value for all archies and distro is not obvious.

2008-01-28  Dominique Dumont  v0.507

	* Build.PL: - On Linux, fetch keyboard conf files from
	/usr/share/X11/xkb/rules instead of /etc/X11/xkb/rules
        - Fixed Build.PL to properly generate keyboard models 
	  taking into account the links xfree86.lst -> base.lst and
	  xorg.lst -> base.lst
	
	* lib/Config/Model/models/Xorg/InputDevice.pl: added replace => {
	keyboard => 'kbd' } for Driver section so the 'keyboard' driver is
	replaced by 'kbd' when loading xorg.conf file. This will enable a