@@ -9,6 +9,7 @@ Section "InputDevice"
         Option          "XkbModel"      "pc101"
         Option          "XkbLayout"     "us"
 EndSection
+
 Section "InputDevice"
         Identifier      "Configured Mouse"
         Driver          "mouse"
@@ -18,6 +19,7 @@ Section "InputDevice"
         Option          "Emulate3Buttons"       "true"
         Option          "ZAxisMapping"          "4 5"
 EndSection
+
 # external DVI with DisplaySize and preferred mode overriden
 Section "Monitor"
     Identifier      "External DVI"
@@ -25,16 +27,19 @@ Section "Monitor"
     Modeline "1280x1024_60.00"  108.88  1280 1360 1496 1712  1024 1025 1028 1060  -HSync +Vsync
     Option "PreferredMode" "1280x1024_60.00"
 EndSection
+
 # internal laptop panel to place on the right of DVI-0
 Section "Monitor"
     Identifier      "Integrated LCD"
     Option          "RightOf" "External DVI"
 EndSection
+
 # disable VGA by default
 Section "Monitor"
     Identifier      "VGA-0"
     Option "Ignore" "true"
 EndSection
+
 Section "Device"
     Identifier      "ATI Technologies, Inc. M22 [Radeon Mobility M300]"
     Driver          "ati"
@@ -44,6 +49,7 @@ Section "Device"
     Option          "Monitor-LVDS"  "Integrated LCD"
     # no need to specific Monitor-VGA-0, it uses the "VGA-0" identifier automatically
 EndSection
+
 Section "Screen"
     Identifier      "Default Screen"
     Device          "ATI Technologies, Inc. M22 [Radeon Mobility M300]"
@@ -54,6 +60,7 @@ Section "Screen"
         Virtual         3072 1200
     EndSubSection
 EndSection
+
 Section "ServerLayout"
         Identifier      "Default Layout"
         Screen          "Default Screen"
