@@ -1,9 +1,3 @@
-# nvidia-xconfig: X configuration file generated by nvidia-xconfig
-# nvidia-xconfig:  version 1.0  (buildd@ninsei)  Tue Jun 24 18:08:05 UTC 2008
-
-# nvidia-settings: X configuration file generated by nvidia-settings
-# nvidia-settings:  version 1.0  (randy@juliet2)  Sat May 12 15:26:42 PDT 2007
-
 Section "ServerLayout"
     Identifier     "Layout0"
     Screen      0  "Screen0" 0 0
@@ -12,7 +6,6 @@ Section "ServerLayout"
 EndSection
 
 Section "Files"
-    RgbPath         "/usr/X11R6/lib/X11/rgb"
     FontPath        "/usr/X11R6/lib/X11/fonts/misc/:unscaled"
     FontPath        "/usr/X11R6/lib/X11/fonts/misc/"
     FontPath        "/usr/X11R6/lib/X11/fonts/Speedo/"
@@ -57,9 +50,6 @@ EndSection
 Section "Device"
     Identifier     "Videocard0"
             Driver         "vesa"
-    #Driver "nvidia"
-    #VendorName     "NVIDIA Corporation"
-    #BoardName      "Quadro NVS 280 PCI-E"
 EndSection
 
 Section "Screen"
